--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="./vendor/css/bootstrap.min.css" type="text/css" />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
+        <link rel="icon" href="./images/favicon.jpeg" type="image" sizes="16x16">
         <script type="text/javascript" src="./vendor/js/jquery.js"></script>
         <script type="text/javascript" src="./vendor/js/popper.js"></script>
         <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
