--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <div class="parent">
                         <div class="banner-in-wrap">
                             <div class="banner">
-                                <img class="img img-responsive" src="./images/banner.png" alt="banner" />
+                                <img class="img img-responsive desktop-only" src="./images/banner.png" alt="banner" />
+                                <img class="img img-responsive mobile-only" src="./images/mobile-banner.jpg" alt="banner" />
                             </div>
                         </div>
                     </div>
