--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./vendor/css/bootstrap.min.css" type="text/css" />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
