--- a/adminPortal/index.html
+++ b/adminPortal/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </header>
-        <sectio>
+        <section>
             <div class="login-wrapper col-sm-8 col-md-8 col-xs-12">
                 <div class="container-left col-sm-6 col-md-6 col-xs-12">
                     <div class="header">
@@ -55,7 +55,7 @@
                 </div>
                 <div class="clr"></div>
             </div>
-        </sectio>
+        </section>
         <footer>
             <div class="copyright">
                 <p>Copyright © 2021 - 2022 Sprink</p>
