--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -68,10 +68,183 @@
 
                     </div>
                     <div class="dashboard-step-3 ordering-wrap">
-                    
+                        <div class="header">
+                            <h3>Ordering(Admin Flow)</h3>
+                        </div>
+                        <div class="order-wrap">
+                            <div class="tiles-wrap">
+                                <div class="tile">
+                                    <h3>Office 1</h3>
+                                    <p>bagmane tech park</p>
+                                </div>
+                                <div class="tile">
+                                    <h3>Office 1</h3>
+                                    <p>bagmane tech park</p>
+                                </div>
+                                <div class="tile">
+                                    <h3>Office 1</h3>
+                                    <p>bagmane tech park</p>
+                                </div>
+                                <div class="tile">
+                                    <h3>Office 1</h3>
+                                    <p>bagmane tech park</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="upcoming orders">
+                            <h3>Upcoming Orders</h3>
+                            <div class="order-wrap">
+                                <div class="order">
+                                    <div class="top">
+                                        <div class="dish-name">North Indian Veg</div>
+                                        <div class="quantity">20 Meals</div>
+                                        <div class="action-wrap">
+                                            <button class="small-button">Edit</button>
+                                            <button class="small-button">Delete</button>
+                                        </div>
+                                    </div>
+                                    <div class="down">
+                                        <p>20/3/2021 - Lunch</p>
+                                    </div>
+                                </div>
+                                <div class="order">
+                                    <div class="top">
+                                        <div class="dish-name">North Indian Veg</div>
+                                        <div class="quantity">20 Meals</div>
+                                        <div class="action-wrap">
+                                            <button class="small-button">Edit</button>
+                                            <button class="small-button">Delete</button>
+                                        </div>
+                                    </div>
+                                    <div class="down">
+                                        <p>20/3/2021 - Lunch</p>
+                                    </div>
+                                </div>
+                                <div class="order">
+                                    <div class="top">
+                                        <div class="dish-name">North Indian Veg</div>
+                                        <div class="quantity">20 Meals</div>
+                                        <div class="action-wrap">
+                                            <button class="small-button">Edit</button>
+                                            <button class="small-button">Delete</button>
+                                        </div>
+                                    </div>
+                                    <div class="down">
+                                        <p>20/3/2021 - Lunch</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="new-order">
+                            <div class="new-order-wrap">
+                                <div class="date">
+                                    <input type="date" />
+                                </div>
+                                <div class="plan">
+                                    <input type="text" class="f-input-small" placeholder="Plan"/>
+                                    <input type="text" class="f-input-small" placeholder="Quantity"/>
+                                </div>
+                                <div class="office-wrap">
+                                    <select class="office-wrap small-select">
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                    </select>
+                                </div>
+                                <div class="action">
+                                    <button class="medium-button">Add to Order</button>
+                                </div>
+                            </div>
+                            <div class="new-order-wrap">
+                                <div class="date">
+                                    <input type="date" />
+                                </div>
+                                <div class="plan">
+                                    <input type="text" class="f-input-small" placeholder="Plan"/>
+                                    <input type="text" class="f-input-small" placeholder="Quantity"/>
+                                </div>
+                                <div class="office-wrap">
+                                    <select class="office-wrap small-select">
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                    </select>
+                                </div>
+                                <div class="action">
+                                    <button class="medium-button">Add to Order</button>
+                                </div>
+                            </div>
+                            <div class="new-order-wrap">
+                                <div class="date">
+                                    <input type="date" />
+                                </div>
+                                <div class="plan">
+                                    <input type="text" class="f-input-small" placeholder="Plan"/>
+                                    <input type="text" class="f-input-small" placeholder="Quantity"/>
+                                </div>
+                                <div class="office-wrap">
+                                    <select class="office-wrap small-select">
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                        <option>BTM</option>
+                                    </select>
+                                </div>
+                                <div class="action">
+                                    <button class="medium-button">Add to Order</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="dashboard-step-4 approve-users-wrap">
-
+                        <div class="header">
+                            <h3>Approve Users</h3>                            
+                        </div>
+                        <div class="approve-wrap">
+                            <div class="approve-header">
+                                <div class="item">
+                                    Name
+                                </div>
+                                <div class="item">
+                                    Email
+                                </div>
+                                <div class="item">
+                                    Phone
+                                </div>
+                                <div class="item">
+                                    Office
+                                </div>
+                                <div class="item">
+                                    <input type="checkbox" />
+                                </div>
+                            </div>
+                            <div class="approve-item">
+                                <div class="item">
+                                    Test
+                                </div>
+                                <div class="item">
+                                    Test
+                                </div>
+                                <div class="item">
+                                    Test
+                                </div>
+                                <div class="item">
+                                    Test
+                                </div>
+                                <div class="item">
+                                    <input type="checkbox" />
+                                </div>
+                                <div class="item">
+                                    <button>Approve</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="action-wrap-app">
+                            <button class="medium-button">Approve All</button>
+                            <button class="medium-button">Reject All</button>
+                        </div>
                     </div>
                 </div>
                 <div class="clr"></div>
