--- a/adminPortal/dashboard.html
+++ b/adminPortal/dashboard.html
@@ -72,79 +72,75 @@
                             <h3>Ordering(Admin Flow)</h3>
                         </div>
                         <div class="order-wrap">
-                            <div class="tiles-wrap">
-                                <div class="tile">
+                            <div class="tiles-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12">
+                                <div class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4">
                                     <h3>Office 1</h3>
                                     <p>bagmane tech park</p>
                                 </div>
-                                <div class="tile">
+                                <div class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4 ">
                                     <h3>Office 1</h3>
                                     <p>bagmane tech park</p>
                                 </div>
-                                <div class="tile">
+                                <div class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4">
                                     <h3>Office 1</h3>
                                     <p>bagmane tech park</p>
                                 </div>
-                                <div class="tile">
+                                <div class="tile col-sm-2 col-md-2 col-lg-2 col-xs-4">
                                     <h3>Office 1</h3>
                                     <p>bagmane tech park</p>
                                 </div>
+                                <div class="clr"></div>
                             </div>
                         </div>
-                        <div class="upcoming orders">
+                        <div class="upcoming-orders">
                             <h3>Upcoming Orders</h3>
                             <div class="order-wrap">
-                                <div class="order">
-                                    <div class="top">
-                                        <div class="dish-name">North Indian Veg</div>
-                                        <div class="quantity">20 Meals</div>
-                                        <div class="action-wrap">
+                                <div class="order col-sm-12 col-md-12 col-lg-12 col-xs-12">
+                                    <div class="top col-sm-12 col-md-12 col-lg-12 col-xs-12 ">
+                                        <div class="f-l dish-name col-sm-3 col-md-3 col-lg-3 col-xs-3">North Indian Veg</div>
+                                        <div class="f-l quantity col-sm-3 col-md-3 col-lg-3 col-xs-3">20 Meals</div>
+                                        <div class="f-l action-wrap col-sm-5 col-md-5 col-lg-5 col-xs-6">
                                             <button class="small-button">Edit</button>
                                             <button class="small-button">Delete</button>
                                         </div>
+                                        <div class="clr"></div>
                                     </div>
-                                    <div class="down">
+                                    <div class="down col-sm-4 col-md-4 col-lg-4 col-xs-12">
                                         <p>20/3/2021 - Lunch</p>
                                     </div>
+                                    <div class="clr"></div>
                                 </div>
-                                <div class="order">
-                                    <div class="top">
-                                        <div class="dish-name">North Indian Veg</div>
-                                        <div class="quantity">20 Meals</div>
-                                        <div class="action-wrap">
+                                <div class="order order col-sm-12 col-md-12 col-lg-12 col-xs-12">
+                                    <div class="top col-sm-12 col-md-12 col-lg-12 col-xs-12 ">
+                                        <div class="f-l dish-name col-sm-3 col-md-3 col-lg-3 col-xs-3">North Indian Veg</div>
+                                        <div class="f-l quantity col-sm-3 col-md-3 col-lg-3 col-xs-3">20 Meals</div>
+                                        <div class="f-l action-wrap col-sm-5 col-md-5 col-lg-5 col-xs-6">
                                             <button class="small-button">Edit</button>
                                             <button class="small-button">Delete</button>
                                         </div>
+                                        <div class="clr"></div>
                                     </div>
-                                    <div class="down">
+                                    <div class="down col-sm-4 col-md-4 col-lg-4 col-xs-12">
                                         <p>20/3/2021 - Lunch</p>
                                     </div>
+                                    <div class="clr"></div>
                                 </div>
-                                <div class="order">
-                                    <div class="top">
-                                        <div class="dish-name">North Indian Veg</div>
-                                        <div class="quantity">20 Meals</div>
-                                        <div class="action-wrap">
-                                            <button class="small-button">Edit</button>
-                                            <button class="small-button">Delete</button>
-                                        </div>
-                                    </div>
-                                    <div class="down">
-                                        <p>20/3/2021 - Lunch</p>
-                                    </div>
-                                </div>
+                                <div class="clr"></div>
                             </div>
                         </div>
                         <div class="new-order">
-                            <div class="new-order-wrap">
-                                <div class="date">
+                            <div class="new-order-act">
+                                <button class="med-button">New Order</button>
+                            </div>
+                            <div class="new-order-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12">
+                                <div class="date f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
                                     <input type="date" />
                                 </div>
-                                <div class="plan">
+                                <div class="plan f-l col-sm-4 col-md-4 col-lg-4 col-xs-6">
                                     <input type="text" class="f-input-small" placeholder="Plan"/>
                                     <input type="text" class="f-input-small" placeholder="Quantity"/>
                                 </div>
-                                <div class="office-wrap">
+                                <div class="office-wrap f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
                                     <select class="office-wrap small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
@@ -152,19 +148,20 @@
                                         <option>BTM</option>
                                     </select>
                                 </div>
-                                <div class="action">
-                                    <button class="medium-button">Add to Order</button>
+                                <div class="action f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
+                                    <button class="small-button">Add to Order</button>
                                 </div>
+                                <div class="clr"></div>
                             </div>
-                            <div class="new-order-wrap">
-                                <div class="date">
+                            <div class="new-order-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12">
+                                <div class="date f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
                                     <input type="date" />
                                 </div>
-                                <div class="plan">
+                                <div class="plan f-l col-sm-4 col-md-4 col-lg-4 col-xs-6">
                                     <input type="text" class="f-input-small" placeholder="Plan"/>
                                     <input type="text" class="f-input-small" placeholder="Quantity"/>
                                 </div>
-                                <div class="office-wrap">
+                                <div class="office-wrap f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
                                     <select class="office-wrap small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
@@ -172,19 +169,20 @@
                                         <option>BTM</option>
                                     </select>
                                 </div>
-                                <div class="action">
-                                    <button class="medium-button">Add to Order</button>
+                                <div class="action f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
+                                    <button class="small-button">Add to Order</button>
                                 </div>
+                                <div class="clr"></div>
                             </div>
-                            <div class="new-order-wrap">
-                                <div class="date">
+                            <div class="new-order-wrap col-sm-12 col-md-12 col-lg-12 col-xs-12">
+                                <div class="date f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
                                     <input type="date" />
                                 </div>
-                                <div class="plan">
+                                <div class="plan f-l col-sm-4 col-md-4 col-lg-4 col-xs-6">
                                     <input type="text" class="f-input-small" placeholder="Plan"/>
                                     <input type="text" class="f-input-small" placeholder="Quantity"/>
                                 </div>
-                                <div class="office-wrap">
+                                <div class="office-wrap f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
                                     <select class="office-wrap small-select">
                                         <option>BTM</option>
                                         <option>BTM</option>
@@ -192,10 +190,12 @@
                                         <option>BTM</option>
                                     </select>
                                 </div>
-                                <div class="action">
-                                    <button class="medium-button">Add to Order</button>
+                                <div class="action f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
+                                    <button class="small-button">Add to Order</button>
                                 </div>
+                                <div class="clr"></div>
                             </div>
+                            <div class="clr"></div>
                         </div>
                     </div>
                     <div class="dashboard-step-4 approve-users-wrap">
@@ -204,46 +204,48 @@
                         </div>
                         <div class="approve-wrap">
                             <div class="approve-header">
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Name
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Email
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Phone
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Office
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-1">
                                     <input type="checkbox" />
                                 </div>
+                                <div class="clr"></div>
                             </div>
                             <div class="approve-item">
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Test
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Test
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Test
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-2">
                                     Test
                                 </div>
-                                <div class="item">
+                                <div class="item f-l col-sm-1 col-md-1 col-lg-1 col-xs-1">
                                     <input type="checkbox" />
                                 </div>
-                                <div class="item">
-                                    <button>Approve</button>
+                                <div class="item f-l col-sm-2 col-md-2 col-lg-2 col-xs-3">
+                                    <button class="small-button">Approve</button>
                                 </div>
+                                <div class="clr"></div>
                             </div>
                         </div>
                         <div class="action-wrap-app">
-                            <button class="medium-button">Approve All</button>
-                            <button class="medium-button">Reject All</button>
+                            <button class="small-button">Approve All</button>
+                            <button class="small-button">Reject All</button>
                         </div>
                     </div>
                 </div>
